<resources>
    <string name="app_name">CelianDroidBurger</string>
    <string name="client_name">Nom</string>
    <string name="client_firstname">Prenom</string>
    <string name="client_phone">Telephone</string>
    <string name="client_address">Adresse</string>
    <string name="datetime">Heure livraison</string>
    <string name="commander">Commander</string>
    <string name="sharedpref">pref</string>
    <string-array name="burger">
        <item>Burger du chef</item>
        <item>Cheese Burger</item>
        <item>Burger Montagnard</item>
        <item>Burger Italien</item>
        <item>Burger Végétarien</item>
    </string-array>
</resources>